[package]
name = "netlink-packet-wireguard"
version = "0.2.2"
authors = ["Leo <leo881003@gmail.com>", "Jake McGinty <me@jake.su>"]
edition = "2018"
homepage = "https://github.com/rust-netlink/netlink"
repository = "https://github.com/rust-netlink/netlink"
keywords = ["wireguard", "netlink", "linux"]
license = "MIT"
readme = "../README.md"
description = "Wireguard generic netlink packet definitions"

[dependencies]
anyhow = "1.0.42"
byteorder = "1.4.3"
libc = "0.2.98"
log = "0.4.14"
netlink-packet-generic = { version = "0.3.1" }
netlink-packet-utils = { version = "0.5.1" }

[dev-dependencies]
base64 = "0.13.0"
env_logger = "0.9.0"
futures = "0.3.16"
netlink-packet-core = { version = "0.4.2" }
netlink-proto = { version = "0.10" }
genetlink = { version = "0.2.1" }
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
