[package]
name = "netlink-packet-wireguard"
version = "0.2.3"
authors = ["Leo <leo881003@gmail.com>", "Jake McGinty <me@jake.su>"]
edition = "2018"
homepage = "https://github.com/rust-netlink/netlink-packet-wireguard"
repository = "https://github.com/rust-netlink/netlink-packet-wireguard"
keywords = ["wireguard", "netlink", "linux"]
license = "MIT"
readme = "README.md"
description = "Wireguard generic netlink packet definitions"

[dependencies]
anyhow = "1.0.42"
byteorder = "1.4.3"
libc = "0.2.98"
log = "0.4.14"
netlink-packet-generic = { version = "0.3.3" }
netlink-packet-utils = { version = "0.5.2" }

[dev-dependencies]
base64 = "0.13.0"
env_logger = "0.10.0"
futures = "0.3.16"
getrandom = "0.2.10"
netlink-packet-core = { version = "0.7.0" }
netlink-proto = { version = "0.11.2" }
genetlink = { version = "0.2.5" }
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
